--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,600;1,400;1,600&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,5 +9,7 @@
 *,
 *::before,
 *::after {
-  font-family: "Poppins";
+  /* font-family: "Poppins"; */
+  font-family: 'Roboto', sans-serif;
+
 }
